# brain-cockpit

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  README.md  config.yaml  craco.config.js  environment.yml  genindex.html  gifty_to_gltf.py  index.html  main.py  objects.inv  package.json  pyproject.toml  requirements.txt  search.html  searchindex.js  tsconfig.json
.github/workflows/: api_unit_tests.yml  build_deploy_docs.yml  build_front.yml  ebrains_mirror.yml
_sources/: index.rst.txt
_sources/pages/: instance_setup.md.txt  viewer_features.md.txt
_static/: documentation_options.js
api/: __init__.py  alignments.py  alignments_explorer.py  config.example.yaml  config.yaml  correlation_maps.py  cuts.py  datasets_explorer.py  fmri_image.py  knn_maps.py  main.py  pyproject.toml  regressed_coordinates.py  server.py  surface_contrasts.py  surface_gradient.py
api/src/brain_cockpit/: __init__.py  alignments_explorer.py  app.py  datasets_explorer.py  server.py  utils.py
api/src/brain_cockpit/endpoints/: alignments_explorer.py  datasets_explorer.py  features_explorer.py  server.py
api/src/brain_cockpit/scripts/: gifti_to_gltf.py
api/src/brain_cockpit/utils/: gifti_to_gltf.py  resample_functional_images.py
api/tests/: test_api.py
api/tests/api_endpoints/: conftest.py  test_alignments.py  test_config.py  test_datasets.py
api/tests/dummy_data/: config.yaml
api/tests/dummy_data/alignment_dataset/: dataset.csv
api/tests/dummy_data/alignments_dataset/: dataset.csv  mapping.pkl
api/tests/dummy_data/features_dataset/: dataset.csv  map0.gii  map1.gii  map2.gii  map3.gii  map4.gii  map5.gii
api/tests/dummy_data/surface_dataset/: dataset.csv  map1.gii  map2.gii
bc_utils/: gifty_to_gltf.py  setup.py
custom_utils/: gifty_to_gltf.py  resample_functional_images.py  setup.py
doc/: conf.py  index.rst
doc/pages/: installation_and_setup.md  instance_setup.md
pages/: contributing.html  instance_setup.html  introduction.html  viewer_features.html
public/: index.html  manifest.json
src/: App.css  App.scss  App.tsx  Scene.tsx  brainsprite.js  colors.ts  main.html  mpld3.v0.5.1.js  react-app-env.d.ts  serviceWorker.ts
src/components/brainspriteCuts/: index.tsx
src/components/canvasCrosshair/: index.tsx
src/components/canvasSlice/: index.tsx
src/components/colorbar/: index.tsx  style.scss
src/components/contrastFingerprint/: index.tsx  style.scss
src/components/fingerprint/: index.tsx  style.scss
src/components/genericPlottable/: index.tsx  style.scss
src/components/header/: index.tsx  style.scss
src/components/headerItem/: index.tsx  style.scss
src/components/horizontalBar/: index.tsx
src/constants/: colors.scss  index.ts  index.tsx
utils/: brainsprite_wrapper.py  setup.py
web/: .env  craco.config.js  main.html  package.json  tsconfig.json
web/public/: index.html  manifest.json
web/src/: App.scss  App.tsx  index.scss  index.tsx
(+88 files in other folders)
