[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "brain-cockpit"
authors = [
  {name = "Alexis Thual", email = "alexisthual@gmail.com"},
]
description = "A web-based viewer to explore large fMRI datasets"
readme = "README.md"
keywords = ["visualisation", "fMRI", "brain", "web-app"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "joblib>=1.2.0",
  "flask",
  "flask-cors",
  "gltflib",
  "nibabel",
  "nilearn",
  "numpy>=1.20",
  "pandas",
  "python-dotenv",
  "rich>=13.3.1",
  "scikit-learn",
  "scipy",
  "simplejson",
  "torch",
  "tqdm",
  "waitress",
]

[project.optional-dependencies]
dev = [
  "black",
  "brain-cockpit[doc]",
  "pre-commit",
]
doc = [
  "furo>=2022.12.07",
  "m2r2",
  "myst_parser",
  "numpydoc",
  "sphinx==5.3.0",
  "sphinx-copybutton",
  "sphinx-gallery>=0.11.1",
]

[project.urls]
homepage = "https://github.com/alexisthual/brain-cockpit"
repository = "https://github.com/alexisthual/brain-cockpit.git"

[tool.black]
line-length = 79
preview = true

[tool.flake8]
ignore = ["E203", "W503"]

[tool.setuptools.dynamic]
version = {attr = "brain_cockpit.__version__"}
